Text alignment fix

--- a/src/scss/components/_dovetable.scss
+++ b/src/scss/components/_dovetable.scss
@@ -16,8 +16,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
 
-      &:first-child { text-align: center; }
-      &:last-child { text-align: right; }
+      &:first-child, &:last-child { text-align: center; }
 
       @include break-at($medium-screens) {
         display: table-cell;
@@ -105,7 +104,7 @@
       &:last-child {
         display: block;
         margin-bottom: 2rem;
-        text-align: right;
+        text-align: center;
 
         @include break-at($medium-screens) { display: table-cell; }
       }
